--- a/index.html
+++ b/index.html
@@ -1,25 +1,30 @@
-<!-- -->
+<!-- RED BOX-->
 <!DOCTYPE html>
-<html>
-<script src="https://aframe.io/releases/0.9.2/aframe.min.js"></script>
-<script src="https://raw.githack.com/jeromeetienne/AR.js/2.0.0/aframe/build/aframe-ar.js"></script>
+<hl>
+  <script src="https://aframe.io/releases/0.9.2/aframe.min.js"></script>
+  <script src="https://raw.githack.com/jeromeetienne/AR.js/2.0.0/aframe/build/aframe-ar.js"></script>
+  <body style="margin: 0px; overflow:hidden;">
+    <a-scene embedded arjs='sourceType: webcam; detectionMode: mono; trackingMethod: best; debugUIEnabled: false;'>
+      <a-marker-camera preset='custom' type='pattern' url='marks/cat.patt'>
+        <a-entity
+          camera="active: true"
+          gltf-model="url(/gltf/stack_of_skulls/stack_of_skulls.gltf)"
+          position="10 0 0"
+          rotation="0 0 0"/>
+        </a-entity>
+      </a-marker-camera>
+    </a-scene>
 
-<body>
-  <a-scene embedded arjs='trackingMethod: best;'>
-    <a-anchor hit-testing-enabled='true'>
-      <!-- Model -->
-      <a-entity
-        position="0 0 0"
-        scale="0.001 0.001 0.001"
-        obj-model="obj: url(objs/buildings.obj);"
-        rotation="0 0 0">
-      
-      </a-entity>
-      <!-- Animate -->
-      <!-- Card info -->
-    </a-anchor>
-    <a-camera-static></a-camera-static>
-  </a-scene>
-</body>
-
-</html>
+    <a-scene embedded arjs isMobile>
+      <a-marker-camera preset='custom' type='pattern' url='marks/pumpkin.patt'>
+        <a-entity
+          gltf-model="url(/gltf/pumpkin_halloween/pumpkin_halloween.gltf)"
+          position="0 0.5 0"
+          scale="0.04 0.04 0.04"
+          rotation="0 90 -90"/>
+        </a-entity>
+      </a-marker-camera>
+    </a-scene>
+    
+  </body>
+</ml>
