--- a/index.html
+++ b/index.html
@@ -3,28 +3,54 @@
 <hl>
   <script src="https://aframe.io/releases/0.9.2/aframe.min.js"></script>
   <script src="https://raw.githack.com/jeromeetienne/AR.js/2.0.0/aframe/build/aframe-ar.js"></script>
-  <body style="margin: 0px; overflow:hidden;">
-    <a-scene embedded arjs='sourceType: webcam; detectionMode: mono; trackingMethod: best; debugUIEnabled: false;'>
-      <a-marker-camera preset='custom' type='pattern' url='marks/cat.patt'>
-        <a-entity
-          camera="active: true"
-          gltf-model="url(/gltf/stack_of_skulls/stack_of_skulls.gltf)"
-          position="10 0 0"
-          rotation="0 0 0"/>
-        </a-entity>
-      </a-marker-camera>
-    </a-scene>
+  <script>
+    AFRAME.registerComponent('marker-pumpkin', {
+      init: function () {
+        debugger;
+        var marker = this.el;
+        // Make the element emit events when found and when lost.
+        marker.setAttribute('emitevents', 'true');
+        marker.addEventListener('markerFound', function() {
+          var markerId = marker.id;
+          console.log('markerFound', markerId);
+          // TODO: Add your own code here to react to the marker being found.
+        });
+        marker.addEventListener('markerLost', function() {
+          var markerId = marker.id;
+          console.log('markerLost', markerId);
+          // TODO: Add your own code here to react to the marker being lost.
+        });
+      }
+    });
+  </script>
 
-    <a-scene embedded arjs isMobile>
-      <a-marker-camera preset='custom' type='pattern' url='marks/pumpkin.patt'>
+  <body style="margin: 0px; overflow:hidden;">
+    <a-scene embedded arjs="trackingMethod:best; sourceType: webcam; debugUIEnabled: false;">
+      <a-marker id="marker-skull" type='pattern' url='/marks/skull.patt'>
+        <a-entity
+          gltf-model="url(/gltf/stack_of_skulls/stack_of_skulls.gltf)"
+          position="0 0 0"
+          rotation="0 90 -90"/>
+        </a-entity>
+      </a-marker>
+      <a-marker id="marker-pumpkin" type='pattern' url='/marks/pumpkin.patt'>
         <a-entity
           gltf-model="url(/gltf/pumpkin_halloween/pumpkin_halloween.gltf)"
           position="0 0.5 0"
           scale="0.04 0.04 0.04"
           rotation="0 90 -90"/>
         </a-entity>
-      </a-marker-camera>
+      </a-marker>
+      <a-marker id="marker-cat" type='pattern' url='/marks/cat.patt'>
+        <a-obj-model mtl="objs/robot-cat-high-poly/robot_cat_sketchfab.mtl"
+          position="0 0 0"
+          scale="0.1 0.1 0.1"
+          obj-model="obj: url(objs/robot-cat-high-poly/robot_cat_sketchfab.obj);"
+          rotation="300 0 0">
+        </a-obj-model>
+      </a-marker>
+
+      <a-entity camera></a-entity>
     </a-scene>
-    
   </body>
 </ml>
