--- a/index.html
+++ b/index.html
@@ -98,6 +98,13 @@
           rotation="-90 0 0"/>
         </a-entity>
       </a-marker>
+      <a-marker id="marker-monster" type='pattern' url='/marks/monster.patt'>
+        <a-entity
+          gltf-model="url(/gltf/monster/monster.gltf)"
+          position="0 0.5 0"
+          rotation="-90 0 0"/>
+        </a-entity>
+      </a-marker>
 
       <!-- OBJ -->
       <a-marker id="marker-cat" type='pattern' url='/marks/cat.patt'>
